Fix spacing in form (#167)
* Fix spacing in form

* CR

* Using FormFieldLayout component

--- a/frontend/src/components/FormHint/index.module.css
+++ b/frontend/src/components/FormHint/index.module.css
@@ -1,5 +1,4 @@
 .root {
-  margin-top: -32px;
   font-family: var(--font-family-body);
   font-size: var(--font-size-xxs);
   font-weight: 400;
